--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -117,7 +117,7 @@
                     data-is-show-cover="true"
                 {% endif %}
                 data-id="{{request.webapp_owner_id}}"
-                data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}">
+                data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}"
                 data-varnish="{{is_varnish_url}}"
                 >
             </div>
