--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -19,7 +19,7 @@
           }
       }
        var hm = document.createElement("script");
-       hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
+       hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href.split('/?')[0]);
        var s = document.getElementsByTagName("script")[0];
        s.parentNode.insertBefore(hm, s);
       /*
