[f_mall_4859][lei]解决需求 4859 404和无商品页面跳转更改

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -105,7 +105,7 @@
 
         {% if is_deleted_data %}
             <div data-role="content" data-theme="x" class="tc" style="background: transparent;">
-                <h2 style="margin-top: 100px;">您访问的数据已被删除</h2>
+                <h2 style="margin-top: 100px;">您访问的数据已被删除xxx</h2>
                 <a data-theme="x" href="{{request|get_back_homepage_url:homepage_workspace_info}}" data-role="button" class="xui-btn mt20">返回首页</a>
             </div>
         {% else %}
@@ -152,7 +152,7 @@
             W.errorMessage = null;
 
             /* 返回首页链接地址 */
-            W.backHomePageUrl = "{{request|get_back_homepage_url:homepage_workspace_info}}";
+            W.backHomePageUrl = "{{request|get_back_homepage_url:homepage_workspace_info|safe}}";
             localStorage.setItem('homepage_url',W.backHomePageUrl);
             {% if messages %}
             {% for message in messages %}
