--- a/weapp/mall/templates/mall/editor/promotion/create_premium_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_premium_sale.html
@@ -97,7 +97,7 @@
 			<div class="xui-i-col">
 				<div class="xui-i-item">
 					<label class="">广告语：</label>
-					<input type="text" class="form-control" id="promotion_title" name="promotion_title" value="{% if promotion %}{{promotion.promotion_title}}{% endif %}" />
+					<input type="text" class="form-control" id="promotion_title" name="promotion_title" value="{% if promotion %}{{promotion.promotion_title}}{% endif %}" maxlength="20" />
 				</div>
 
 				<div class="xui-i-item">
