--- a/weapp/mall/templates/mall/editor/promotion/integral_sales.html
+++ b/weapp/mall/templates/mall/editor/promotion/integral_sales.html
@@ -69,7 +69,7 @@
 	            {{each(i, promotion) items}}
 	            <tr class="xui-activeName xa-selectTr" data-id="${promotion.id}">
 	            	<td>
-	            		<div class="xui-i-promotionName mb5">
+	            		<div class="xui-i-promotionName mb5 text_nowrap">
 							{{if promotion.promotionTitle}}
 							<p class="fn f12">广告语: ${promotion.promotionTitle}</p>
 							{{else}}
