完成商品详情页会员信息分离

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -377,7 +377,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
     {# % endif % #}
     {# jz 2015-10-24 #}
     <!-- 全局导航 -->
-    <div class="wui-globalNav xa-globalNav" data-ui-role="global-nav" data-member="{% if cur_request_member %}true{% else %}false{% endif %}">
+    <div class="wui-globalNav xa-globalNav" data-ui-role="global-nav" data-member="true">
     </div>
     <!-- 返回顶部 -->
     <div class="wui-returnTop xa-returnTop hidden" data-ui-role="return-top">
