修改底部导航BUG

--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -24,6 +24,7 @@
 
 }
 .wui-template-globalNavbar .xui-globalBottomBar .xui-home{
+    background-color: #fff;
     width: 50px;
     border-right: 1px solid #CBCBCB;
     text-align: center;
