--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -172,6 +172,57 @@
                         speed: 3000
                     });
                 }
+
+                // 默认列表页--非会员点击会员中心
+                var height = $(window).height();
+                
+                var $twoDimension = $('.xui-two-dimension');
+
+                var showSwiper = function(){
+                    $('body').swipeMask('show');
+                    $('.mask').css({
+                        height: height,
+                        background: 'rgba(132,132,132,0.5)',
+                        position:'fixed'
+                    });
+                    $('.xui-two-dimension').css({
+                        top: height/2,
+                        'margin-top': -185,
+                        display:'block'
+                    });
+                };
+
+                var isUserCenterLink = function(url){
+                    if (url.indexOf('module=user_center') > 0 &&
+                        url.indexOf('model=user_info') > 0 &&
+                        url.indexOf('action=get') > 0 ) {
+                        return true;
+                    }else{
+                        return false;
+                    }
+                };
+
+                $('.xa-wepage-navbar-link').click(function(event){
+                    var url = $(event.currentTarget).find('a').attr('data-link');
+                    if (url.length == 0 || url.indexOf('javascript:') >= 0) {
+                        return;
+                    }
+                    if (isUserCenterLink(url) && W.curRequestMemberToken.length == 0) {
+                        /* 非会员显示二维码 */
+                        showSwiper();
+                    } else {
+                        if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
+                            window.location.href = url;
+                        }else{
+                            window.location.href = "http://"+ window.location.host + url;
+                        }
+                    }
+                });
+
+                $('.mask').click(function(){
+                    $('body').swipeMask('hide');
+                    $('.xui-two-dimension').hide();
+                });
             });
             {# 百度统计代码开始 #}
             var _hmt = _hmt || [];
