--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -81,7 +81,7 @@
     {% endif %}
     <div data-ui-role="swipemask" class="mask"></div>
     <div class="xui-two-dimension">
-        <img src="{{ current_auth_qrcode_img }}" alt="">
+        <img src="{{ request.webapp_owner_info.qrcode_img }}" alt="">
     </div>
 </div>
 {% endwith %}
