--- a/weapp/apps/app_template/templates/editor/workbench_template.html
+++ b/weapp/apps/app_template/templates/editor/workbench_template.html
@@ -85,6 +85,9 @@ __STRIPPER_TAG__
     W.isSystemManager = <% if user|is_system_manager %>true<% else %>false<% endif %>;
     var bottomDistance = 110;
 
+    /* 自动选中cid，当页面进来的时候 */
+    W.autoSelectCid = 2;
+
     __STRIPPER_TAG__
     var loadPages = function(pageManagerView) {
       W.getApi().call({
