--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -10,7 +10,7 @@
       <li>您当前所在位置</li>
       <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
       <li><a href="/apps/powerme/powermes/">微助力</a></li>
-      <li class="active">新建</li>
+      <li class="active">新建微助力</li>
     </ul>
   </div>
   
@@ -62,7 +62,7 @@
         "task": "weizoom-load-termite-components"
       }
     --> 
-  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_termite_components|safe }}
+  {{ '["appkit.page", "appkit.componentadder", "appkit.powermedescription", "appkit.submitbutton"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
