--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -3,5 +3,15 @@
 {% endblock %}
 
 {% ifequal component.type 'appkit.powermedescription' %}
-
+    <div class="wui-powerme-container">
+        <div class="wui-i-top"></div>
+        <div class="wui-i-body">
+            <div class="wui-i-timing"></div>
+            <div class="wui-i-btngroup"></div>
+            <div class="wui-i-description"></div>
+            <div class="wui-i-rules"></div>
+            <div class="wui-i-states"></div>
+        </div>
+        <div class="wui-i-masterinfo"></div>
+    </div>
 {% endifequal %}
