修改后台编辑底部导航，二级菜单位置问题

--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -140,6 +140,11 @@
     padding-right: 10px;
     text-align: center;
 }
+.wui-template-globalNavbar .xui-globalBottomBar .xui-subMenu li:last-child {    
+    line-height: 40px;
+    height: 40px;
+    overflow: hidden;
+}
 .wui-template-globalNavbar .xui-globalBottomBar .xui-subMenu li a{
     color: #333;
     display: block;
