--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -1,17 +1,105 @@
 {% load workbench_filter %}
 {% block css %}
+    <style>
+        hr{
+            display: inline-block;
+            width: 100px;
+            vertical-align: middle;
+        }
+        .wui-powerme-container{
+            width: 100%;
+            height: auto;
+            text-align: center;
+            font-family: "微软雅黑";
+        }
+        .wui-powerme-container div{
+            text-align: center;
+            margin-top: 20px;
+        }
+        .wui-powerme-container>.wui-i-top{
+            width: 100%;
+            height: auto;
+            background: transparent;
+        }
+        .wui-powerme-container .wui-i-top>img{
+            width: 100%;
+            height: 300px;
+            margin: 0;
+            border: none;
+        }
+        .wui-powerme-container .wui-i-body div{
+            margin-top: 15px;
+        }
+        .wui-powerme-container .wui-i-body .wui-i-btngroup button{
+            width: 80%;
+            height: 35px;
+            border-radius: 2px;
+            background: grey;
+            border: none;
+            color: white;
+            font-size: 20px;
+        }
+        .wui-powerme-container .wui-i-body .wui-i-rules .wui-i-title{
+
+        }
+        .wui-powerme-container .wui-i-timing{
+            color: white;
+        }
+        .wui-powerme-container .wui-i-timing b{
+            width: 20px;
+            height: 100%;
+            background: black;
+            font-size: 14px;
+            padding: 7px 5px;
+        }
+        .wui-powerme-container .wui-i-masterinfo{
+            position: static;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 30px;
+            padding: 10px 0;
+            font-size: 12px;
+            line-height: 30px;
+            background-color: white;
+        }
+        .wui-powerme-container .wui-i-masterinfo b{
+            color: lightsalmon;
+            font-size: 15px;
+        }
+    </style>
 {% endblock %}
 
 {% ifequal component.type 'appkit.powermedescription' %}
     <div class="wui-powerme-container">
-        <div class="wui-i-top"></div>
-        <div class="wui-i-body">
-            <div class="wui-i-timing"></div>
-            <div class="wui-i-btngroup"></div>
-            <div class="wui-i-description"></div>
-            <div class="wui-i-rules"></div>
-            <div class="wui-i-states"></div>
+        <div class="wui-i-top">
+            <img src="">
         </div>
-        <div class="wui-i-masterinfo"></div>
+        <div class="wui-i-body">
+            <div class="wui-i-timing">
+                <i></i>:
+                <b>03</b>天
+                <b>12</b>时
+                <b>33</b>分
+                <b>21</b>秒
+            </div>
+            <div class="wui-i-btngroup">
+                <button>活动已结束</button>
+            </div>
+            <div class="wui-i-description">
+                收集票数进入前50名，即可获得儿童专用坐垫
+            </div>
+            <div class="wui-i-rules">
+                <div class="wui-i-title"><hr><i></i><b>活动规则</b><i></i><hr></div>
+            </div>
+            <div class="wui-i-states">
+                <div class="wui-i-title"><hr><i></i><b>助力值TOP100</b><i></i><hr></div>
+            </div>
+        </div>
+        <div class="wui-i-masterinfo">
+            <span class="wa-myrange">我的排名:<b>12</b></span>
+            <span class="wa-mypower">我的助力值:<b>12343</b></span>
+            <span class="wa-totalcount">参与人数:<b>723123</b></span>
+        </div>
     </div>
 {% endifequal %}
