--- a/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
+++ b/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
@@ -65,8 +65,11 @@
           <!-- ↓限制订单满额时显示↓ -->
           <p>在商城支付的订单满{{red_envelope_rule.limit_order_money|floatformat}}元，就会赠送给你一个红包。支付的订单越多，获得的红包就越多哦！</p>
       {% else %}
-          <!-- ↓不限制订单金额时显示↓ -->
-          <p>在商城只要支付订单，就会赠送给你一个红包。支付的订单越多，获得的红包就越多哦！</p>
+          <!-- ↓只有订单的红包显示↓ -->
+          {% if not red_envelope_rule.receive_method %}
+              <!-- ↓不限制订单金额时显示↓ -->
+              <p>在商城只要支付订单，就会赠送给你一个红包。支付的订单越多，获得的红包就越多哦！</p>
+          {% endif %}
       {% endif %}
       <p style="margin-bottom:.75rem;">好友分享的红包，只能领取一个。</p>
     </div>
