--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/list_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/list_address.html
@@ -71,7 +71,7 @@ $(document).ready(function() {
     }
 
     if($.isEmptyObject(ship_infos)){
-        $('xa-emptyTemplate').show();
+        $('.xa-emptyTemplate').show();
     }
     else {
         $('.xa-addNewBtn').show();
