--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1535,3 +1535,44 @@ button.xui-deleteImageButton{
 .xui-propertyView-app-PowerMeGroup .propertyGroup_property_input {
     width: 76%;
 }
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_dialogSelectField {
+    margin-top: 10px;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_textareaField .propertyGroup_property_input {
+    width: 80% !important;
+	display: inline-block;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_label {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 7px;
+    line-height: 24px;
+    text-align: right;
+    width: 88px;
+}
+/*配色选择*/
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_input .xui-selectBtn {
+	padding: 20px 10px;
+	color: #333;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_input .xui-selectBtn:nth-child(1) {
+	background:#FEF6C5;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_input .xui-selectBtn:nth-child(2) {
+	background:#E62F41;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_input .xui-selectBtn:nth-child(3) {
+	background:#FF7D43;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_dialogSelectField,.xui-propertyView-app-PowerMeGroup .propertyGroup_property_textareaField,.xui-propertyView-app-PowerMeGroup .propertyGroup_property_radioField {
+    margin-top: 10px;
+}
+/*倒计时checkbox*/
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_checkboxField {
+    width: 85px;
+    float: right;
+    margin-top: -40px;
+}
+.xui-propertyView-app-PowerMeGroup .propertyGroup_property_checkboxField .propertyGroup_property_label{
+	display: none;
+}
