[b_mall_5590][lei]图片空间初始提交完成

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
@@ -51,9 +51,8 @@
                 </div>
             </div>
             <div class="xui-productPhoto mt10">
-                <div class="xui-addPhoto mb10 fl pr">
-                    <span class="xui-i-box"></span>
-                    <input id="" name="imgFile123"  data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa">
+                <div class="xui-addPhoto xa-addPhoto mb10 fl pr">
+                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
                 </div>
                 <div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
                 </div>
@@ -145,9 +144,8 @@
                 </div>
             </div>
             <div class="xui-productPhoto mt10">
-                <div class="xui-addPhoto mb10 fl pr">
-                    <span class="xui-i-box"></span>
-                    <input id="" name="imgFile123"  data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa">
+                <div class="xui-addPhoto xa-addPhoto mb10 fl pr">
+                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
                 </div>
                 <div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
                 </div>
