--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3734,15 +3734,29 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
 .xui-productReviewCreatePage .xui-productPhoto{
     overflow: hidden;
 }
+.xui-productReviewCreatePage .xui-imgList li{
+    position: relative;
+    float: left;
+    margin-bottom: 10px;
+    width: 45px;
+    margin-right: 2px;
+}
 .xui-productReviewCreatePage .xui-productPhoto .xui-addPhoto,
 .xui-productReviewCreatePage .xui-productPhoto .xui-deletePhoto{
-    width: 45px;
+    width: 46px;
     height: 45px;
     display: inline-block;
+    background: url(/static_v2/img/webapp/mall/photoBtn.png);
+    -webkit-background-size: 92px 45px;
+    background-size: 92px 45px;
+    background-position: -46px 0;
     text-align: center;
     line-height: 45px;
     margin-right: 3px;
     overflow: hidden;
+    float: left;
+    position: relative;
+    margin-bottom: 10px;
 }
 .xui-productReviewCreatePage .xui-productPhoto .xui-deletePhoto{
     line-height: 35px;
@@ -3753,16 +3767,13 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
 .xui-productReviewCreatePage .xui-productPhoto .xui-deletePhoto{
     margin-right: 0;
 }
-.xui-productReviewCreatePage .xui-productPhoto .xui-addPhoto span.xui-i-box,
+/*.xui-productReviewCreatePage .xui-productPhoto .xui-addPhoto,
 .xui-productReviewCreatePage .xui-productPhoto .xui-deletePhoto{
     display: inline-block;
     width:46px;
     height:45px;
-    background: url(/static_v2/img/webapp/mall/photoBtn.png);
-    -webkit-background-size: 92px 45px;s
-    background-size: 92px 45px;
-    background-position: -46px 0;
-}
+    
+}*/
 .xui-productReviewCreatePage .xui-productPhoto .xui-deletePhoto{
     background-position: 0 0;
 }
