初始授权页面无法显示

--- a/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
@@ -9,7 +9,7 @@
 }
 </style>
 {% endblock %}
-{% block single-content-panel %}
+{% block content-panel %}
 <div class="xui-weixin-unbindAccountPage" style = "margin-top: 42px;">
 	<div class="relative">
 		<div class="xa-fansFilterView xui-filterPanel  pr">
