修复商品详情多规格出现错误注释的BUG

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -268,8 +268,8 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
                 {# jz 2015-10-20 #}
                 <!-- 积分商品 -->
                 {# % if product.type == 'integral' % #}
-                {% if cur_request_member %#}
-                {% if price_info.price == price_info.original_price %#}
+                {#% if cur_request_member %#}
+                {#% if price_info.price == price_info.original_price %#}
                 <!--span class="xt-price xa-price xui-vipPrice-num">{{ price_info.min_price }}</span-->
                 {#% else %#}
                 <!--span class="xt-price xui-vipPrice-num">{{ price_info.min_price }}</span-->
