--- a/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
@@ -99,10 +99,10 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>名称</th>
+				<th>活动名称</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
-				<th>状态</th>
+				<th>活动状态</th>
 				<th>参与人数</th>
 				<th>操作</th>
 			</tr>
@@ -137,14 +137,14 @@
 					${item.participant_count}
 				</td>
 				<td>
+				    <a href="/apps/powerme/powerme_participances/?id=${item.id}" class="ml5">查看</a>
+				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
 					{{if (item.status === '未开启' || item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
 					{{if (item.status === '进行中')}}
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
-					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="/apps/powerme/powerme_participances/?id=${item.id}" class="ml5">查看结果</a>
 				</td>
 			</tr>
 			{{/each}}
